objects/CMPL123__AI_Root_Cause_Advisor_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Only 1 RCA config record should be active per record.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Criteria__c</fullName>
        <label>Criteria</label>
        <metadataRelationshipControllingField>CMPL123__AI_Root_Cause_Advisor_Config__mdt.CMPL123__Source_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>AI_Root_Cause_Advisor_Config</relationshipLabel>
        <relationshipName>AI_Root_Cause_Advisor_Config</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CMPL123__Expiration_Period__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Specify the length of time (in hours) that an RCA result will remain active, before being refreshed.</inlineHelpText>
        <label>Expiration Period</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal To</fullName>
                </value>
                <value>
                    <fullName>Not Equal To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Order__c</fullName>
        <inlineHelpText>Order runs from lowest to highest.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123__RCA_Template_Id__c</fullName>
        <label>RCA Template ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Record_Type__c</fullName>
        <inlineHelpText>Please specify the Record Type Name.</inlineHelpText>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Result__c</fullName>
        <label>Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Sort_Order__c</fullName>
        <inlineHelpText>Defines the default sort order of the contributing factors:

Weight - Sorts contributing factors based on overall significance in NLP analysis

Record Total - Sorts contributing factors based on the number of records in results</inlineHelpText>
        <label>Sort Order</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weight</fullName>
                    <default>true</default>
                    <label>Weight</label>
                </value>
                <value>
                    <fullName>Record Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__Source_Object__c</fullName>
        <label>Source Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>AI_Root_Cause_Advisor_Config</relationshipLabel>
        <relationshipName>AI_Root_Cause_Advisor_Config</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>AI Root Cause Advisor Config</label>
    <pluralLabel>AI Root Cause Advisor Config</pluralLabel>
    <validationRules>
        <fullName>CMPL123__Allow_Only_Picklist_Fields_In_Criteria</fullName>
        <active>true</active>
        <description>It should allow only picklist OR multi-picklist type in criteria field.</description>
        <errorConditionFormula>IF( !ISBLANK(CMPL123__Criteria__c),
!CONTAINS(CMPL123__Criteria__r.DataType, 'Picklist'),
FALSE)</errorConditionFormula>
        <errorDisplayField>CMPL123__Criteria__c</errorDisplayField>
        <errorMessage>The Criteria Field is limited to picklist or multi-picklist fields only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123__Check_Criteria_If_Secondary_Populated</fullName>
        <active>true</active>
        <description>A Criteria Field value must be specified if any secondary criteria is populated.</description>
        <errorConditionFormula>IF( ISBLANK(CMPL123__Criteria__c),
OR( !ISBLANK(TEXT(CMPL123__Operator__c)),
!ISBLANK(CMPL123__Result__c)),
FALSE)</errorConditionFormula>
        <errorDisplayField>CMPL123__Criteria__c</errorDisplayField>
        <errorMessage>A Criteria Field must be specified if any secondary criteria is populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123__Check_Expiration_Period</fullName>
        <active>true</active>
        <description>Expiration Period value must be more than 0 hours.</description>
        <errorConditionFormula>CMPL123__Expiration_Period__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>CMPL123__Expiration_Period__c</errorDisplayField>
        <errorMessage>Expiration period must be more than 0 hours.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123__Check_Operator_If_Secondary_Populated</fullName>
        <active>true</active>
        <description>A Operator field value must be specified if any secondary criteria is populated.</description>
        <errorConditionFormula>IF( ISBLANK(TEXT(CMPL123__Operator__c)),
OR( !ISBLANK(CMPL123__Result__c),
!ISBLANK(CMPL123__Criteria__c)),
FALSE)</errorConditionFormula>
        <errorDisplayField>CMPL123__Operator__c</errorDisplayField>
        <errorMessage>An Operator must be specified if any secondary criteria is populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123__Check_Result_If_Secondary_Populated</fullName>
        <active>true</active>
        <description>A Result field value must be specified if any secondary criteria is populated.</description>
        <errorConditionFormula>IF( ISBLANK(CMPL123__Result__c),
OR( !ISBLANK(TEXT(CMPL123__Operator__c)),
!ISBLANK(CMPL123__Criteria__c)),
FALSE)</errorConditionFormula>
        <errorDisplayField>CMPL123__Result__c</errorDisplayField>
        <errorMessage>A Result Value must be specified if any secondary criteria is populated.</errorMessage>
    </validationRules>
</CustomObject>